--- a/views/index.html
+++ b/views/index.html
@@ -119,5 +119,6 @@
 	<script src="/scripts/index.js"></script>
 	<script src="/scripts/dealer.js"></script>
 	<script src="/scripts/manufacturer.js"></script>
+	<script src="/scripts/transporter.js"></script>
 </body>
 </html>
