--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,3 +1,8 @@
-<div ng-controller="HomeCtrl">
-Home
-</div>
+<section id="home" data-ng-controller="HomeCtrl">
+	<div class="page-header">
+		<h1>Welcome!</h1>
+	</div>
+	<div class="col-md-12 show-grid">
+		
+	</div>
+</section>
