Sale modules partially done

--- a/public/partials/add/manufacturer.html
+++ b/public/partials/add/manufacturer.html
@@ -1,4 +1,4 @@
-<section id="manufacturer" data-ng-controller="ManufacturerCtrl">
+<section id="manufacturer">
 	<div class="page-header">
 		<h1 ng-if="!manufacturer.id">Add a Manufacturer</h1>
 		<h1 ng-if="manufacturer.id">Update Manufacturer</h1>
