--- a/public/partials/add/transporter.html
+++ b/public/partials/add/transporter.html
@@ -1,4 +1,4 @@
-<section id="transporter" data-ng-controller="TransporterCtrl">
+<section id="transporter">
 	<div class="page-header">
 		<h1 ng-if="!transporter.id">Add a Transporter</h1>
 		<h1 ng-if="transporter.id">Update Transporter</h1>
