--- a/public/partials/view/dealers.html
+++ b/public/partials/view/dealers.html
@@ -1,4 +1,4 @@
-<section id="dealer" data-ng-controller="DealerCtrl">
+<section id="dealer">
 	<div class="page-header">
 		<h1>View Dealers</h1>
 	</div>
