--- a/public/partials/view/manufacturers.html
+++ b/public/partials/view/manufacturers.html
@@ -1,4 +1,4 @@
-<section id="manufacturers" data-ng-controller="ManufacturerCtrl">
+<section id="manufacturers">
 	<div class="page-header">
 		<h1>View Manufacturers</h1>
 	</div>
