--- a/public/partials/add/dealer.html
+++ b/public/partials/add/dealer.html
@@ -1,4 +1,4 @@
-<section id="dealer" data-ng-controller="DealerCtrl">
+<section id="dealer">
 	<div class="page-header">
 		<h1 ng-if="!dealer.id">Add a Dealer</h1>
 		<h1 ng-if="dealer.id">Update Dealer</h1>
