--- a/public/partials/view/transporters.html
+++ b/public/partials/view/transporters.html
@@ -1,4 +1,4 @@
-<section id="transporters" data-ng-controller="TransporterCtrl">
+<section id="transporters">
 	<div class="page-header">
 		<h1>View Transporters</h1>
 	</div>
