--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ body {
 	opacity: 0;
 }
 
-.ng-invalid {
+input.ng-invalid,select.ng-invalid,textarea.ng-invalid {
 	border: 1px solid red !important;
 }
 
