--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 input.ng-invalid,select.ng-invalid,textarea.ng-invalid {
-	border: 1px solid red !important;
+	border: 1px solid #A94442 !important;
 }
 
 section {
@@ -347,4 +347,8 @@ p.help-block {
 
 table tr.disabled {
 	opacity: 0.5
+}
+
+.nowrap {
+	white-space: nowrap;
 }
